--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Progate</title>
   </head>
   <body>
-    <h1 class="title">ハロー マンシュパック</h1>
+    <h1 class="title">ハロー ドラえもん</h1>
     <link rel="stylesheet" href="stylesheet.css">
     <p>はじめのいっぽ</p>
   </body>
